--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
             </h1>
         </div>
         <div id="space1"></div>
-        <a href="../Game_1/Game_1_Main.html" target="_blank">
+        <a href="./Game_1/Game_1_Main.html" target="_blank">
             <div id="Game_1">
                 <h2>Game 1</h2>
             </div>
         </a>
         <div id="space1"></div>
-        <a href="../Game_2/Game_2_Index.html" target="_blank">
+        <a href="./Game_2/Game_2_Index.html" target="_blank">
             <div id="Game_2">
                 <h2>Game 2</h2>
             </div>
         </a>
         <div id="space1"></div>
-        <a href="../Game_3/Game_3_Index.html" target="_blank">
+        <a href="./Game_3/Game_3_Index.html" target="_blank">
             <div id="Game_3">
                 <h2>Game 3</h2>
             </div>
