--- a/Game_3/Game_3_Index.html
+++ b/Game_3/Game_3_Index.html
@@ -32,7 +32,7 @@
             border: .25vmin solid black;
         }
     </style>
-    <script src="./Game_3_Script_something.js" defer type="module"></script>
+    <script src="./Game_3_Script_1_game.js" defer type="module"></script>
 </head>
 <body>
     <div id="game-board"></div>
